--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ Primary use:
   width: 100%;
   height: 100%;
   padding: 0 80px 0 172px;
-  background-color: #ffe151;
+  background-color: #f7ad0c;
 
   box-shadow: 0 10px 15px 0px rgba(0,0,0,0.1);
   -moz-box-shadow: 0 10px 15px 0px rgba(0,0,0,0.1);
@@ -349,7 +349,7 @@ Primary use:
 }
 
 .wrappic1 img {
-  max-width: 100%;
+  max-width: 30%;
 }
 
 /*---------------------------------------------*/
@@ -405,7 +405,10 @@ Primary use:
 }
 
 
+.vc-highlight {
+  color: #333;
 
+}
 
 
 
